packages/ui/src/main.module.pcss
.editor {
  position: relative;
  box-sizing: border-box;
  z-index: 1;

  padding-bottom: 300px;

  --content-width: 650px;

  --font-size-ui: 16px;
  --size-padding-toolbar: 4px;
  --radius-control: 4px;

  width: 100%;

  svg {
    max-height: 100%;
  }
}

.paragraph {
  min-height: 1em;
}

